--- a/web/src/assets/style/base.less
+++ b/web/src/assets/style/base.less
@@ -3,3 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.main {
+  width: 80%;
+  max-width: 1200px;
+  height: 100%;
+
+  margin: 0 auto;
+  padding: 20px;
+}
